[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/blink_eye/splash_screen.gd" type="Script" id=3]
[ext_resource path="res://addons/awesome_splash/text_node/AweListTextNode.gd" type="Script" id=4]
[ext_resource path="res://addons/awesome_splash/text_node/AweTextNode.gd" type="Script" id=5]
[ext_resource path="res://addons/awesome_splash/assets/font/RobotoCondensed-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://addons/awesome_splash/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/demo_collection/blink_eye/logo.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 230
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 6 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform vec4 color : hint_color = vec4(1.0); // White color

void fragment() {
	vec4 color_circle = color;
	vec2 center = vec2(0.5, 0.5);
	float r = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r > 0.25) {
		color_circle.a = 0.0;
	}
    COLOR = color_circle;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color = Color( 0, 0.8, 0.741176, 1 )

[node name="SplashBinkEye" type="Node2D"]
script = ExtResource( 3 )

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="TitleNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 4 )
font = SubResource( 1 )
anchor = Vector2( 0.5, 0.5 )
char_anchor = Vector2( 0.5, 0.5 )

[node name="InfoNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 5 )
anchor = Vector2( 0.5, 0.5 )
font = SubResource( 2 )

[node name="LogoContainer" type="Node2D" parent="AspectNode"]

[node name="Logo" type="TextureRect" parent="AspectNode/LogoContainer"]
margin_left = -300.0
margin_top = -560.0
margin_right = 300.0
margin_bottom = 40.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="LeftEye" type="ColorRect" parent="AspectNode/LogoContainer"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.47
margin_top = -302.38
margin_right = -77.47
margin_bottom = -202.38
rect_pivot_offset = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightEye" type="ColorRect" parent="AspectNode/LogoContainer"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 75.935
margin_top = -302.38
margin_right = 175.935
margin_bottom = -202.38
rect_pivot_offset = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.8, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="AspectNode"]
